Generate stops table
- Use JavaScript and Bootstrap instead of jQuery DataTables plugin
- Include stop platform name in table if available
- Number table rows with position of each stop in stops array
- Adjust HTML and CSS to prevent map and table from covering footer
- Separate geolocation success from generation of markers and table
- Highlight header nav link for current page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,16 +1,7 @@
-html, body, main, .container {
-  height: 90%;
+html, body {
+  height: 100%;
 }
 #map {
   height: 100%;
-}
-#universities {
-  height: 80%;
-  font-size: 0.8rem;
-}
-.center {
-  margin: auto;
-  width: 80%;
-  padding: 0px;
-  border: 0px;
+  box-sizing: content-box;
 }
